Added Client Server Logic